apps/base/productivity/wayom/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &deploymentName wayom-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: *deploymentName
  template:
    metadata:
      labels:
        app: *deploymentName
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: wayom
          image: ghcr.io/abayomi185/wayom:latest@sha256:b11b530aaf664479ff46ec50e3fbd8a992af2b619217d74187823dfce07ad46d # renovate: datasource=docker depName=ghcr.io/abayomi185/wayom
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3080
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
              readOnly: true
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: config
          configMap:
            name: wayom-config
