apps/base/productivity/wayom/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wayom
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`wayom.local.${DOMAIN}`)
      kind: Rule
      services:
        - name: wayom-service
          port: 3080
  tls:
    certResolver: letsencrypt
